grey text overflow fixed

--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -266,3 +266,9 @@ body.admin-dark {
         background-color: #303030 !important;
     }
 }
+
+// grey text overflow
+.navbar {
+    max-width: 100%;
+    overflow: hidden;
+}
